# OSFileSystem

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  automake_shadow  automake_shadow.sh  confdefs.h  config.status  configure  configure.in  configure.scan  conftest.c  fuse.pc  libtool  shadowFilesystem.c  shfs.c
autom4te.cache/: output.1  output.2  requests  traces.1  traces.2  traces.3  traces.4  traces.5
ddl1/: Makefile.am  ROOTMAKE  configure  configure.ac  libtool
ddl1/autom4te.cache/: output.1  requests  traces.1  traces.2
ddl1/include/: config.h
ddl1/kernel/: .control.o.cmd  .dev.o.cmd  .dir.o.cmd  .file.o.cmd  .fuse.ko.cmd  .fuse.mod.o.cmd  .fuse.o.cmd  .inode.o.cmd  config.status  fuse.ko
ddl1/kernel/.tmp_versions/: fuse.mod
ddl1/lib/: libfuse.la
ddl1/lib/.libs/: libfuse.lai  libfuse.so.2.6.3  libulockmgr.so.1.0.1
ddl1/src/: SRCMAKE  fusemain.c
ddl1/util/: fusermount  ulockmgr_server
extras/: Makefile.in  configure
fuse-2.6.3/: Makefile  config.status  configure  libtool
include/: Makefile  Makefile.in  config.h  config.h.in
lib/: Makefile  Makefile.in  cuse_lowlevel.lo  fuse.lo  fuse_kern_chan.lo  fuse_loop.lo  fuse_loop_mt.lo  fuse_lowlevel.lo  fuse_mt.lo  fuse_opt.lo  fuse_session.lo  fuse_signals.lo  helper.lo  libfuse.la  libulockmgr.la  mount.lo  mount_util.lo  subdir.lo  ulockmgr.lo
src/: .shadow.test.swp  .shfs.c.swp  Makefile  Makefile.am  Makefile.in  Makefile_BM  hasher.sh  md5.h  parse.c  parse.h  shadow.out  shadow.test  shadowTree.h  shadow_time.h  shadowfile.c  shfs  shfs.c
test/: foo.c  (+3 more)
(+61 files in other folders)
